Fixed: sidebar overlap

--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -6,7 +6,9 @@
     min-height: 100%;
     transition: var(--smooth-transition);
     overflow: hidden;
-    z-index: 999;
+    z-index: 1;
+    position: absolute;
+    left: 0;
 }
 
 .sidebar:hover {
